lib/src/compiler/tests/testdata/errors/73.out
error[E001]: syntax error
 --> line:1:9
  |
1 | private foo rule test { condition: true }
  |         ^^^ expecting `global` or `rule`, found `foo`
  |